platform/components/headlamp/overlays/onprem/ingress.yaml
#@ load("@ytt:data", "data")

#! On-premises Headlamp configuration - Ingress
#!
#! Configures Headlamp Ingress for on-premises clusters

#! overlay-phase: post-render
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: headlamp
  namespace: headlamp
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
spec:
  ingressClassName: nginx
  rules:
  - host: #@ "headlamp.{}.{}".format(data.values.cluster_name, data.values.ingress_domain)
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: headlamp
            port:
              number: 80
  tls:
  - hosts:
    - #@ "headlamp.{}.{}".format(data.values.cluster_name, data.values.ingress_domain)
    #! TODO: Ensure 'headlamp-tls' TLS secret exists in headlamp namespace before enabling ingress
    secretName: headlamp-tls
